packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_stack@backtrace.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Root error
| @ tests/common.rs:147:5
| unsigned 64-bit integer
| unsigned 32bit integer
\ backtrace with [n] frames (1)
