packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_stack@glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
unsigned 64-bit integer
│ tests/test_debug.rs:312:51
├─▶ unsigned 32bit integer
│   ╰ tests/test_debug.rs:312:38
╰─▶ Root error
    ╰ tests/common.rs:140:5
