packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_stack@spantrace-backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

unsigned 64-bit integer
│ 📌 tests/test_debug.rs:255:51
├─▶ unsigned 32bit integer
│   ╰ 📌 tests/test_debug.rs:255:38
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
├─▶ spantrace with 2 frames (1)
│   ╰ 📌 tests/common.rs:140:5
╰─▶ backtrace with 18 frames (1)
    ╰ 📌 tests/common.rs:140:5

